--- a/calc.html
+++ b/calc.html
@@ -6,29 +6,28 @@
     <title>Calculator App</title>
     <link rel="stylesheet" href="calc.css">
 </head>
-<body>
+<body">
 
     <section class="container">
+        <button type="button" class="themeBtn" id="toggleTheme">
+            <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#000"><path d="M560-80q-82 0-155-31.5t-127.5-86Q223-252 191.5-325T160-480q0-83 31.5-155.5t86-127Q332-817 405-848.5T560-880q54 0 105 14t95 40q-91 53-145.5 143.5T560-480q0 112 54.5 202.5T760-134q-44 26-95 40T560-80Zm0-80h21q10 0 19-2-57-66-88.5-147.5T480-480q0-89 31.5-170.5T600-798q-9-2-19-2h-21q-133 0-226.5 93.5T240-480q0 133 93.5 226.5T560-160Zm-80-320Z"/></svg>
+            <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#000"><path d="M480-360q50 0 85-35t35-85q0-50-35-85t-85-35q-50 0-85 35t-35 85q0 50 35 85t85 35Zm0 80q-83 0-141.5-58.5T280-480q0-83 58.5-141.5T480-680q83 0 141.5 58.5T680-480q0 83-58.5 141.5T480-280ZM200-440H40v-80h160v80Zm720 0H760v-80h160v80ZM440-760v-160h80v160h-80Zm0 720v-160h80v160h-80ZM256-650l-101-97 57-59 96 100-52 56Zm492 496-97-101 53-55 101 97-57 59Zm-98-550 97-101 59 57-100 96-56-52ZM154-212l101-97 55 53-97 101-59-57Zm326-268Z"/></svg>
+        </button>
         <h2>Calculator App</h2>
         <div class="calc-head">
             <label for="number">
-                Calc-Display:
-                <input type="text" id="display" class="display">
-                <!-- <input type="number" id="display2"> -->
+                <input type="text" id="display" class="display" disabled>
             </label>
         </div>
-        <div class="calc-controls">
+        <div class="calc-body">
              <button type="button" data-key="+" class="opp">+</button>
             <button type="button" data-key="-" class="opp">-</button>
             <button type="button" data-key="/" class="opp">/</button>
             <button type="button" data-key="*" class="opp">*</button>
-            <button type="button" data-key="=" class="equal" id="equal">=</button>
-            <button type="button"  class="clear" id="clear">Clear</button>
-            <button type="button"  data-key="x" class="btn del" id="del">x</button>
-        </div>
-        <div class="calc-body">
-           
-
+            <button type="button" data-key="=" class="equal" id="equal"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e3e3e3"><path d="M160-280v-120h640v120H160Zm0-280v-120h640v120H160Z"/></svg></button>
+            <button type="button"  class="clear" id="clear"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e3e3e3"><path d="m376-300 104-104 104 104 56-56-104-104 104-104-56-56-104 104-104-104-56 56 104 104-104 104 56 56Zm-96 180q-33 0-56.5-23.5T200-200v-520h-40v-80h200v-40h240v40h200v80h-40v520q0 33-23.5 56.5T680-120H280Zm400-600H280v520h400v-520Zm-400 0v520-520Z"/></svg></button>
+            <button type="button"  data-key="x" class="btn del" id="del"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e3e3e3"><path d="m456-320 104-104 104 104 56-56-104-104 104-104-56-56-104 104-104-104-56 56 104 104-104 104 56 56Zm-96 160q-19 0-36-8.5T296-192L80-480l216-288q11-15 28-23.5t36-8.5h440q33 0 56.5 23.5T880-720v480q0 33-23.5 56.5T800-160H360ZM180-480l180 240h440v-480H360L180-480Zm400 0Z"/></svg></button>
+       
             <button type="button" data-key="1" class="btn">1</button>
             <button type="button" data-key="2" class="btn">2</button>
             <button type="button" data-key="3" class="btn">3</button>
